application/static/theme.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* Main grid container */

body {
    background-color: #fff;
    font-family: 'Roboto', Arial;
    font-size: 16px;
    font-weight: normal;
    color: #1a2c41;
    display: grid;
    grid-template-rows: 3em 1fr;
    grid-template-columns: 1fr;
}




/* Navigation */

nav {
    grid-column: 1 / -1;
    grid-row: 1 / 2;
    background-color: rgb(50, 96, 139);
    padding: 0;
    display: grid;
    grid-template-columns: 1fr 2fr repeat(5, 1fr);
    grid-template-areas: "index . user item-new item-list auth-log auth-signup";
}

nav a {
    text-decoration: none;
    color: #fff;
    display: block;
    padding: 0;
    margin: 0;
    text-align: center;
    line-height: 3em;
    overflow-wrap: normal;
}

nav a:hover {
    background-color: rgb(255, 217, 0);
    color: rgb(50, 96, 139);
}

.nav-index {grid-area: index;}
.nav-user {grid-area: user;}
.nav-item-list {grid-area: item-list;}
.nav-item-new {grid-area: item-new;}
.nav-auth-login {grid-area: auth-log;}
.nav-auth-logout {grid-area: auth-log;}
.nav-auth-signup {grid-area: auth-signup;}



/* Item table */

#item-list {
    display: grid;
    padding: 6em 3em;
}

#item-list h1 {
    padding-left: 20px;
    padding-top: 1em;
    padding-bottom: 1em;
}


/* Item detail */

#item-detail {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-areas: "item-toolbar item-bid"
                         "item-details item-bids";
    grid-column-gap: 3em;
    grid-row-gap: 3em;
    padding: 6em 3em;
    align-items: start;
}

#item-detail .item-bid {
    grid-area: item-bid;
}

#item-detail .item-details {
    grid-area: item-details;
}

#item-detail .item-bids {
    grid-area: item-bids;
}

#item-detail .item-toolbar {
    grid-area: item-toolbar;
}

#item-detail .item-toolbar .detail-form {
    display: inline-block;
}

#item-detail .item-toolbar .buttons{
    padding-left: 20px;
}


/* Item new */

#item-new {
    display: grid;
    grid-template-columns: 1fr;
    align-items: start;
    padding: 6em 3em;
}


/* Item edit */

#item-edit {
    display: grid;
    grid-template-columns: 1fr;
    padding: 6em 3em;
}


/* User new */

#user-signup {
    display: grid;
    grid-template-columns: 1fr;
    padding: 6em 6em;
}


/* User login */

#user-login {
    display: grid;
    grid-template-columns: 1fr;
    padding: 6em 3em;
}


/* User Detail */

h2 {
    margin: 0;
    padding: 0;
}

#user-detail {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    align-items: start;
    grid-column-gap: 3em;
    grid-row-gap: 3em;
    background-color: #fff;
    padding: 6em 3em 6em 3em;
}

#user-detail h1 {
    grid-column: span 2;
    padding-left: 20px;
    padding-bottom: 30px;
}

#user-detail div {
    overflow: hidden;
    width: auto;
    display: inline-block;
    border-radius: 20px;
    box-shadow: 5px 5px 20px 4px rgba(0, 0, 0, 0.2);
}

#user-detail .user-items-div {
    grid-column: span 2;
}

#user-detail .user-items-bought-div {
    grid-column: span 2;
}

#user-detail h2 {
    padding-top: 1.5em;
    padding-left: 20px;
    padding-bottom: 1.5em;
}


/* Index */

#index {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-column-gap: 3em;
    grid-row-gap: 3em;
    padding: 6em 3em 6em 3em;
    align-items: start;
}

#index h1 {
    padding-left: 20px;
    padding-top: 1em;
    padding-bottom: 1em;
}





/*

DETAIL ELEMENTS

*/


/* Drop shadow div */

.float-div {
    overflow: hidden;
    width: auto;
    display: inline-block;
    border-radius: 20px;
    box-shadow: 4px 4px 16px 2px rgba(0, 0, 0, 0.2);
}

.float-div .empty-table {
    padding-left: 20px;
    padding-bottom: 20px;
}

/* Table Header */
.table-header {
    padding: 1em 0 1em 20px;
}


/* Detail table */

.detail-table, .detail-table-vertical{
    text-decoration: none;
    border-spacing: 0px;
    width: 100%;
    border-collapse: collapse; 
}

.detail-table tr, .detail-table-vertical tr {
    height: 3em;
    border-bottom: 1px solid #aaa;
}

.detail-table tr:last-child, .detail-table-vertical tr:last-child {
    border: 0;
}

.detail-table-vertical th {
    text-align: left;
}

.detail-table th {
    text-align: left;
    width: 50%;
}

.detail-table-vertical th:first-child, .detail-table-vertical td:first-child {
    padding-left: 20px;
}

.detail-table th:first-child, .detail-table td:first-child {
    padding-left: 20px;
}

.detail-table a, .detail-table-vertical a{
    text-decoration: none;
    color: rgb(50, 96, 139);
}

.detail-table a:hover, .detail-table-vertical a:hover{
    color: rgb(34, 73, 95);
}


/* Detail form */
.detail-form {
    padding: 0 20px 20px 20px;
}

.detail-form label {
    display: block;
}

.detail-form input[type=text], .detail-form textarea, .detail-form input[type=password] {
    display: inline-block;
    width: 50%; /* Full width */
    padding: 12px; 
    border: 1px solid #ccc; /* Gray border */
    border-radius: 4px; /* Rounded borders */
    box-sizing: border-box; /* Make sure that padding and width stays in place */
    margin-top: 0.5em; /* Add a top margin */
    margin-bottom: 1em; /* Bottom margin */
    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
}

.detail-form input[type=text]:focus, .detail-form textarea:focus, .detail-form input[type=password]:focus {
    border: 1px solid rgb(67, 120, 170);
}

.detail-form input[type=submit] {
    background-color: rgb(50, 96, 139);
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    display: block;
    font-family: 'Roboto';
    font-size: 14px;
}

.detail-form input[type=submit]:hover {
    background-color: rgb(255, 217, 0);
    color: rgb(50, 96, 139);
}

.detail-form .inline{
    display: inline-block;
}

.detail-form .error {
    display: inline-block;
    color: red;
    padding-left: 20px;
}

.detail-form select {
    display: inline-block;
    width: 50%;
    padding: 12px; 
    border: 1px solid #ccc; /* Gray border */
    border-radius: 4px; /* Rounded borders */
    box-sizing: border-box; /* Make sure that padding and width stays in place */
    margin-top: 0.5em; /* Add a top margin */
    margin-bottom: 1em; /* Bottom margin */
    background-color: #ffffff;
    border: 1px solid #ccc;
    cursor: pointer;
  }



/* Button */


a[class=btn] {
    background-color: rgb(50, 96, 139);
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    display: inline-block;
    font-size: 14px;
    font-style: none;
    text-decoration: none;
}

a[class=btn]:hover {
    background-color: rgb(255, 217, 0);
    color: rgb(50, 96, 139);
}

.btn-blue {
    background-color: rgb(0, 153, 255);
}

.btn-blue:hover {
    background-color: rgb(0, 179, 255);
}

.btn-red:hover {
    background-color: rgb(255, 102, 0);
}

.btn-green {
    background-color: rgb(0, 230, 85);
}

.btn-green:hover {
    background-color: rgb(0, 255, 85);
}


/* Error form*/

.form-error {
    list-style: none;
    padding-left: 1em;
    color: rgb(255, 30, 0);
}


/* Info text */

.info-text {
    color: #555;
    font-style: italic;
}

@media only screen and (max-width: 768px) {
    /* For mobile phones: */
    body {
        grid-template-rows: 18em 1fr;
        grid-template-columns: 1fr;
    }

    nav {
        /* grid-column: 1 / -1;
        grid-row: 1 / 2;
        background-color: rgb(50, 96, 139);
        padding: 0;
        display: grid; */
        grid-template-rows: repeat(6, 1fr);
        grid-template-columns: 1fr;
        grid-template-areas: "index"
                             "user"
                             "item-new "
                             "item-list"
                             "auth-log" 
                             "auth-signup";
    }

    #user-detail {
        padding-top: 5%;
    }

    #user-detail h1 {
        grid-column: span 1;
        padding-left: 20px;
        padding-bottom: 0;
    }

    #user-detail .user-items-div {
        grid-column: span 1;
    }
    
    #user-detail .user-items-bought-div {
        grid-column: span 1;
    }

    #user-detail {
        grid-template-columns: 1fr;
    }


    /* Index */

    #index {
        grid-template-columns: 1fr;
        padding-top: 35px;
    }


    /* Item list */

    #item-list {
        padding: 6em 3em;;
    }

    /* Item Detail */

    #item-detail {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-areas: "item-toolbar"
                             "item-details"
                             "item-bid"
                             "item-bids";
        grid-column-gap: 3em;
        grid-row-gap: 3em;
        padding: 6em 3em;
    }

    #item-new {
        padding: 6em 3em;
    }
    

    
}

